tests/NormalTests/paczka1/fuzzy1/89650781.err
Error in line 29: 23X A596 00,2
Error in line 27: BLZUUj A599 81,5
Error in line 39: mlFDteL5ym A596 12,2
